[gd_scene load_steps=12 format=2]

[ext_resource path="res://hsz/weapons/net/net.png" type="Texture" id=1]
[ext_resource path="res://hsz/utils/hitbox.gd" type="Script" id=2]
[ext_resource path="res://hsz/weapons/net/net.gd" type="Script" id=3]
[ext_resource path="res://hsz/audio/sfx/net_throw.mp3" type="AudioStream" id=4]
[ext_resource path="res://hsz/audio/sfx/net_open.mp3" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[sub_resource type="CircleShape2D" id=3]
radius = 66.0

[sub_resource type="CircleShape2D" id=6]
radius = 25.0

[sub_resource type="Animation" id=4]
resource_name = "Close"
length = 0.96
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8, 0.88 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Open"
length = 0.96
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8, 0.88 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Open")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Net" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 3 )
acceleration = 5000.0
max_speed = 400.0
flying_duration = 0.5

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )
disabled = true

[node name="Detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Close = SubResource( 4 )
anims/Open = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="FlyingTimer" type="Timer" parent="."]
one_shot = true

[node name="Throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0
autoplay = true

[node name="Open" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="hit" from="Hitbox" to="." method="_on_Hitbox_hit"]
[connection signal="hit" from="Detection" to="." method="_on_Detection_hit"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="FlyingTimer" to="." method="_on_FlyingTimer_timeout"]
